<resources>
    <string name="app_name">Ship Đồ Ăn Đêm</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="facebook_app_id">357284681323683</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="email">email</string>
    <string name="link">link</string>
    <string name="fields">fields</string>
    <string name="fields_name">fields name</string>
    <string name="title_home">Trang chính</string>
    <string name="most_view">Hot sales</string>
    <string name="highlights">Tất cả</string>
    <string name="favorite">Ưa thích</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_account">Tài khoản</string>
    <string name="home">home</string>
    <string name="search">Tìm kiếm</string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài khoản</string>
    <string name="ship_do_an_dem">Ship Đồ Ăn Đêm</string>
    <string name="cart">Giỏ hàng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">CartActivity</string>
</resources>
