<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="#FFFFFF"
        app:tabIndicatorHeight="2dp"
        android:background="@color/colorPrimary"
        app:tabPaddingStart="0dp"
        app:tabPaddingEnd="0dp"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextColor="#DED8DE">
        <android.support.design.widget.TabItem
            android:id="@+id/ti_most_view"
            android:text="@string/most_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:id="@+id/ti_highlights"
            android:text="@string/highlights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:id="@+id/ti_favorite"
            android:text="@string/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TabLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation" />

        <android.support.v4.view.ViewPager
            android:layout_below="@id/tl_tab"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/navigation"/>
</RelativeLayout>
